components/elements/form/form.module.css
.form {
  width: 30%;
  max-width: 400px;
  border-radius: 5px;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.26);
  padding: 10px;
}

@media screen and (max-width: 1024px) {
  .form {
    width: 50%;
    max-width: 500px;
  }

}

@media screen and (max-width: 768px) {
  .form {
    width: 90%;
    max-width: max-content;
  }

}

